[gd_scene load_steps=40 format=2]

[ext_resource path="res://mainMenu.gd" type="Script" id=1]
[ext_resource path="res://font_/MusticaPro-SemiBold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://img_/mainMenu.png" type="Texture" id=3]
[ext_resource path="res://mp3/music.mp3" type="AudioStream" id=4]
[ext_resource path="res://img_/button.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1280, 600 )

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=26]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="DynamicFont" id=22]
size = 53
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1280, 600 )

[sub_resource type="DynamicFont" id=23]
size = 62
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=27]
size = 58
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.247059, 0.0509804, 0.443137, 1 )

[sub_resource type="DynamicFont" id=29]
size = 33
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=30]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="StyleBoxEmpty" id=32]

[sub_resource type="StyleBoxEmpty" id=33]

[sub_resource type="StyleBoxEmpty" id=34]

[sub_resource type="StyleBoxEmpty" id=35]

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 24 )

[node name="menu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -388.0
margin_top = -128.0
margin_right = -348.0
margin_bottom = -88.0

[node name="Start" type="Button" parent="menu"]
margin_left = -16.0
margin_right = 149.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0.666667, 0.0392157, 0.984314, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 26 )
text = "Start"

[node name="Settings" type="Button" parent="menu"]
anchor_left = 0.0296663
anchor_right = 0.0296663
margin_left = 175.813
margin_right = 445.813
margin_bottom = 99.0
custom_colors/font_color = Color( 0.701961, 0, 0.8, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Settings"

[node name="My Web" type="Button" parent="menu"]
anchor_left = 0.0593325
anchor_right = 0.0593325
margin_left = 472.627
margin_right = 637.627
margin_bottom = 99.0
custom_colors/font_color = Color( 0.541176, 0.0509804, 0.741176, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "My Web"

[node name="Itchio" type="Button" parent="menu"]
anchor_left = 0.0889988
anchor_right = 0.0889988
margin_left = 768.44
margin_right = 965.44
margin_bottom = 99.0
custom_colors/font_color = Color( 0.737255, 0.0705882, 0.698039, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Itch.io"

[node name="login" type="Control" parent="."]
margin_left = 136.0
margin_top = 104.0
margin_right = 176.0
margin_bottom = 144.0

[node name="userName" type="LineEdit" parent="login"]
margin_left = 371.0
margin_top = 181.0
margin_right = 632.0
margin_bottom = 260.0
custom_colors/font_color = Color( 0.839216, 0.0588235, 1, 1 )
custom_fonts/font = SubResource( 22 )
custom_styles/normal = SubResource( 25 )
max_length = 8
expand_to_text_length = true
caret_blink = true

[node name="Label" type="Label" parent="login"]
margin_left = -21.0
margin_top = 173.0
margin_right = 399.0
margin_bottom = 253.0
custom_colors/font_color = Color( 0.756863, 0.0901961, 1, 1 )
custom_fonts/font = SubResource( 23 )
text = "Player Name:"

[node name="welcome" type="Label" parent="."]
margin_left = 32.0
margin_top = 29.0
margin_right = 1259.0
margin_bottom = 182.0
custom_colors/font_color = Color( 0.784314, 0.0470588, 0.705882, 1 )
custom_fonts/font = SubResource( 27 )
text = "Welcom to GnuChan Pong Are You Ready???"

[node name="welcome2" type="Label" parent="."]
margin_left = 224.0
margin_top = 106.0
margin_right = 1451.0
margin_bottom = 259.0
custom_colors/font_color = Color( 0.784314, 0.0470588, 0.705882, 1 )
custom_fonts/font = SubResource( 27 )
text = "I Bored And Make This Game"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="Settings" type="Control" parent="."]
visible = false
margin_left = 104.0
margin_top = 200.0
margin_right = 1200.0
margin_bottom = 568.0

[node name="Panel" type="Panel" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 28 )

[node name="MusicVolumeLabel" type="Label" parent="Settings"]
margin_left = 16.0
margin_top = 64.0
margin_right = 237.0
margin_bottom = 107.0
custom_colors/font_color = Color( 1, 0, 0.376471, 1 )
custom_fonts/font = SubResource( 29 )
text = "Music Volume:"

[node name="VolumeSlider" type="HSlider" parent="Settings/MusicVolumeLabel"]
margin_left = 240.0
margin_top = 8.0
margin_right = 488.0
margin_bottom = 48.0
min_value = -80.0
max_value = 0.0

[node name="TEXT" type="Label" parent="Settings"]
margin_left = 272.0
margin_top = 16.0
margin_right = 905.0
margin_bottom = 59.0
custom_colors/font_color = Color( 1, 0, 0.376471, 1 )
custom_fonts/font = SubResource( 29 )
text = "Settings Windows This is Borring Window"

[node name="Button" type="Button" parent="Settings"]
margin_left = 16.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 30 )
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 32 )
custom_styles/focus = SubResource( 33 )
custom_styles/disabled = SubResource( 34 )
custom_styles/normal = SubResource( 35 )
text = "Close"

[connection signal="pressed" from="menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="menu/My Web" to="." method="_on_My_Web_pressed"]
[connection signal="pressed" from="menu/Itchio" to="." method="_on_Itchio_pressed"]
[connection signal="text_entered" from="login/userName" to="." method="_on_userName_text_entered"]
[connection signal="finished" from="music" to="." method="_on_music_finished"]
[connection signal="value_changed" from="Settings/MusicVolumeLabel/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="Settings/Button" to="." method="_on_Button_pressed"]
